2012-12-28  Russ Allbery  <rra@stanford.edu>

	* t/critic.t: New test that runs perlcritic (and perltidy) on all
	source files and checks for violations.
	* t/data/perlcriticrc: New file.
	* t/data/perltidyrc: New file.
	* ANSIColor.pm: Substantial reworking to improve coding style and
	layout.  Update to Perl 5.6 syntax.  Unconditionally load Carp for
	simplicity.
	* Makefile.PL: Require Perl 5.6.  Remove conditionals for
	configuration that was not supported prior to Perl 5.6.
	* t/basic.t: Update coding style.
	* t/eval.t: Likewise.
	* t/stringify.t: Likewise.

	* t/minimum-version.t: New test for the minimum required version
	of Perl.

	* t/pod-coverage.t: New test for POD coverage.

	* ANSIColor.pm: Add use warnings.
	* Makefile.PL: Add use strict and use warnings.
	* t/strict.t: New test for strict and warnings in all code.

	* t/pod.t: Update coding style.
	* t/pod-spelling.t: Use Test::Spelling instead of including a
	less-tested version of the same code.  Update coding style.

2012-03-18  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 3.02 released.

	* ANSIColor.pm (AUTOLOAD): Only return pass-through behavior if
	the function that was called was one of our constants, rather than
	turning every unknown function in the Term::ANSIColor namespace
	into a passthrough join function when colors are disabled.
	* t/basic.t: Test proper error reporting with colors disabled.

	* ANSIColor.pm (AUTOLOAD): Preserve an existing value of $@ when
	generating a constant sub and restore it afterwards.  Diagnose
	errors in creating the constant sub and die instead of ignoring
	them.
	* t/eval.t: New test for $@ preservation.

	* ANSIColor.pm: Add italic and the ITALIC constant.  Document that
	the support for it is rare.
	* t/basic.t: Test italic and ITALIC support.

	* ANSIColor.pm: Add "mistyped" as a stopword, required by the
	latest aspell on Debian.

2011-07-20  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 3.01 released.
